# agent-skill-floop

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: architecture.md  commands.md  contributing.md  features.md  getting-started.md  index.md  use-cases.md
docs/demos/: context-network.md  cross-session.md  domain-learning.md  requirements-driven.md  team-onboarding.md
docs/use-cases/: enterprises.md  individuals.md
src/floop/: __init__.py  adapters.py  cli.py  preview.py  prototype.py  review.py  skills.py  tokens.py
tests/: test_adapters.py  test_cli.py  test_preview.py  test_prototype.py  test_review.py  test_tokens.py
